src/scss/plugins/primeReact.scss
// --------- DATATABLE MODIFY BORDERS AND PADDING -----------
.p-datatable .p-datatable-tbody > tr > td, .p-datatable .p-datatable-thead > tr > th {
    padding: 0.5rem 0.5rem
}

.p-datatable .p-datatable-header {
    border-width: 0.1rem;
}

.p-datatable .p-datatable-footer {
    border-width: 0.1rem;
}

.p-datatable .p-paginator {
    border-width: 0.1rem;
}

.p-datatable thead, tbody, tfoot, tr, td, th {
    border-color: #E4E1E1;
    border-style: solid;
    border-width: 0.1rem;
}

.p-datatable table tbody td {
    position: relative;
}

.p-datatable-table.p-datatable-scrollable-table thead::after {
    content: '';
    position: absolute;
    top: -2px;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: #E4E1E1;
}

// --------- DATATABLE MODIFY SEARCH INPUT TEXT -----------
.p-datatable .p-input-icon-left .pi.pi-search {
    padding-left: 5px;
}

.p-datatable .p-input-icon-left .p-inputtext.p-component {
    padding-left: 20px;
}

// ---------- MESSAGES MODIFY MARGINS ----------------
.p-message {
    margin: 0rem 0;
    margin-bottom: 1rem;
}

.p-message-wrapper .p-message-close.p-link {
    margin-left: auto;
}

// --------- INPUTS MODIFY ---------------------------

.p-inputtext, .p-inputnumber, .p-dropdown, .p-calendar  {
    height: 2.5rem;
}

//apply to all components except when is inside a datatable
.p-inputtext:not(.p-datatable .p-inputtext),
.p-inputnumber:not(.p-datatable .p-inputnumber),
.p-dropdown:not(.p-datatable .p-dropdown),
.p-calendar:not(.p-datatable .p-calendar)  {
    width: -webkit-fill-available !important;
}

.p-invalid.p-inputtext:enabled:focus {
    box-shadow: 0 0 0 0.2rem #fbbaba;
}

// --------- DROPDOWN MODIFY -----------------------

.p-dropdown-label.p-inputtext {
    padding: 0.40rem 0.75rem;
    font-family: $app-font-family;
    color: $app-color-text;
}

.p-dropdown-items {
    padding-left: 0rem;
    margin: 0rem;
}

.p-dropdown-item  {
    color: $app-color-text;
}

//--------------- ACCORDION CSS -----------------------
.p-accordion-header.p-highlight .p-accordion-header-link {
    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
    color: white;
    /*use variable --custom-element-color*/
    background-color: var(--custom-pr-accordion-color);
}

.p-accordion-header p-highlight .p-accordion-header-link a {
    color: white;
}

.p-accordion-header a {
    color: black;
    text-decoration: unset;
}

.p-accordion-header a:hover {
    text-decoration: unset;
}

// --------- ACCORDION MODIFY TO REMOVE TITLE HIPERLINK ------
.p-accordion-header-link {
    text-decoration: none;
}

// --------- MENU BAR MODIFY -------------------

.p-menubar-root-list{
    margin-bottom: unset;
}

.p-submenu-list, .p-menubar-root-list {
    padding-left: unset;
}

.p-menuitem-content a {
    text-decoration: unset;
}

.p-menubar .p-submenu-list .p-menuitem-link {
    width: max-content !important;
    max-width: none !important;
}

.p-menubar .p-submenu-list {
    width: auto !important;
    max-width: none !important;
}

